--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -15,13 +15,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <VideoView
+        <com.webex.wseclient.WseSurfaceView
             android:id="@+id/fragment_home_local_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <VideoView
+        <com.webex.wseclient.WseSurfaceView
             android:id="@+id/fragment_home_remote_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
