--- a/android/app/src/main/res/menu/navigation.xml
+++ b/android/app/src/main/res/menu/navigation.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_chat"
+        android:icon="@drawable/ic_chat_black_24dp"
+        android:title="@string/title_chat" />
 
     <item
         android:id="@+id/navigation_notifications"
