--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="dev.mese.starthack.a2017.assismed.MainActivity">
+    tools:context="dev.mese.lauzhack.a2017.assismed.MainActivity">
 
     <FrameLayout
         android:id="@+id/content"
