--- a/android/app/src/main/res/layout/fragment_chat.xml
+++ b/android/app/src/main/res/layout/fragment_chat.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#e1e1e1"
     android:orientation="vertical"
     android:padding="10dp">
@@ -24,16 +24,11 @@
         android:orientation="horizontal"
         android:paddingBottom="2dp">
 
-
         <EditText
             android:id="@+id/messageEditText"
-            android:layout_width="252dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/button1"
-            android:layout_toLeftOf="@+id/sendMessageButton"
-            android:layout_weight="0.72"
+            android:layout_weight="1"
             android:ems="10"
             android:maxHeight="80dp" />
 
@@ -41,10 +36,7 @@
             android:id="@+id/sendMessageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:adjustViewBounds="true"
             android:background="@drawable/ic_send_black_24dp" />
     </LinearLayout>
-
-
 </RelativeLayout>
