--- a/android/app/src/main/res/layout/fragment_chat.xml
+++ b/android/app/src/main/res/layout/fragment_chat.xml
@@ -1,42 +1,40 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e1e1e1"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:paddingBottom="70dp">
 
     <ListView
         android:id="@+id/msgListView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="4"
         android:divider="@null"
-        android:dividerHeight="0dp"
-        android:paddingBottom="10dp" />
+        android:dividerHeight="0dp" />
 
     <LinearLayout
         android:id="@+id/form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingBottom="2dp">
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/messageEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:maxHeight="80dp" />
+            android:layout_marginRight="5dp"
+            android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/sendMessageButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            android:background="@drawable/ic_send_black_24dp" />
+            android:background="@drawable/ic_send_black_24dp"
+            android:padding="20dp" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
