--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -21,16 +21,28 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/activity_call_call_doctor_text"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/cardview_light_background"
-                android:paddingBottom="20dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                android:text="Call Doctor"
-                android:textSize="20sp" />
+                android:orientation="horizontal"
+                android:paddingLeft="20dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/cellphone_wireless" />
+
+                <TextView
+                    android:id="@+id/activity_call_call_doctor_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="20dp"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="20dp"
+                    android:text="Call doctor"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -38,9 +50,9 @@
                 android:background="@color/cardview_light_background"
                 android:paddingBottom="20dp"
                 android:paddingLeft="20dp"
-                android:paddingTop="20dp"
+                android:paddingTop="50dp"
                 android:text="You are able to receive a call."
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
