--- a/android/app/src/main/res/menu/navigation.xml
+++ b/android/app/src/main/res/menu/navigation.xml
@@ -12,8 +12,8 @@
         android:title="@string/title_chat" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_about"
+        android:icon="@drawable/ic_people_black_24dp"
+        android:title="@string/title_about" />
 
 </menu>
